Add contamination plate maps

--- a/QC_report.ipynb
+++ b/QC_report.ipynb
@@ -29,18 +29,19 @@
     "## QC Summaries\n",
     "The notebook provides the following analyses:\n",
     "\n",
+    "* **Plate Layout**: Location of samples and controls on the plate\n",
     "* **Primer Dimer Content**: Input reads vs. % attributed to primer dimers \n",
     "* **Balancing Across Batches**: Swarm plot of reads output by the pipeline by batch\n",
-    "* **Successul Amplification** summary, including:\n",
-    "    * Sample Reads vs. Number of Successfully Amplified Loci\n",
-    "    * Parasitemia vs. Number of Successfully Amplified Loci\n",
-    "* **Plate Maps**, including:\n",
-    "    * Plate Layout\n",
-    "    * Reads Heatmap\n",
-    "    * Successful Amplification Heatmap\n",
     "* **Control Summary**, including:  \n",
     "    * Polyclonality of Positive Controls\n",
     "    * Read Summary for Negative Controls\n",
+    "    * Contamination Maps for Negative Controls\n",
+    "* **Successul Amplification** summary, including:\n",
+    "    * Sample Reads vs. Number of Successfully Amplified Loci\n",
+    "    * Parasitemia vs. Number of Successfully Amplified Loci\n",
+    "* **Amplification Plate Maps**, including:\n",
+    "    * Reads Heatmap\n",
+    "    * Successful Amplification Heatmap\n",
     " \n",
     "      \n",
     "Note: A locus is considered successfully amplified if it has more than `read_threshold` reads, where `read_threshold` is a threshold that can be set below."
@@ -423,8 +424,129 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47051bd-8e27-4913-9505-b11cc670379f",
+   "id": "29bb6ac8-8fbb-4a79-b636-a4418cb5794d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Plate Layout\n",
+    "\n",
+    "The plate layout provides a visual representation of sample organization, including the placement of positive and negative controls. This is allows verification that controls are positioned correctly to validate assay performance with later plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d5b6dc-1023-4a67-9eb0-921fc855a3b2",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_plate_template <- function(summary_samples, batches, nrows=8, ncols=12) {\n",
+    "    quadrants <-\n",
+    "      expand.grid(\n",
+    "        Batch = batches,\n",
+    "        y = 1:nrows,\n",
+    "        Column = 1:ncols\n",
+    "      ) %>%\n",
+    "      mutate(\n",
+    "        ymin = y - 0.45,\n",
+    "        ymax = y + 0.45,\n",
+    "        xmin = Column - 0.45,\n",
+    "        xmax = Column + 0.45\n",
+    "      ) %>%\n",
+    "      mutate(Row = toupper(rev(letters[1:nrows])[y])) %>%\n",
+    "      # Join on the sample information to the plate\n",
+    "      left_join(\n",
+    "        summary_samples %>%\n",
+    "          select(Batch, Column, Row, SampleType) %>%\n",
+    "          distinct(),\n",
+    "        by = c(\"Batch\", \"Column\", \"Row\" = \"Row\")\n",
+    "      )\n",
+    "    return(quadrants)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80874960-24a2-4db8-83d9-eca28cebcab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quadrants <- create_plate_template(summary_samples, unique(summary_samples$Batch))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44be002-3aac-47f4-bfb0-3c326ec3a42c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_plate_layout <- function(quadrants, sample_colours) {\n",
+    "    # Ensure that NAs in SampleType are replaced with \"NA\" string (or another label)\n",
+    "    quadrants$SampleType[is.na(quadrants$SampleType)] <- \"empty\"\n",
+    "    plate_layout <- ggplot(quadrants) +\n",
+    "      # Tiles representing sample types, fill based on SampleType\n",
+    "      geom_tile(aes(x = Column, y = y, fill = SampleType), color = \"white\") +\n",
+    "      # Facet by Batch\n",
+    "      facet_wrap(vars(Batch), ncol = 1) +\n",
+    "      scale_y_continuous(breaks = quadrants$y, labels = quadrants$Row) +\n",
+    "      # Make sure labels are correct\n",
+    "      xlab(\"Column\") +\n",
+    "      ylab(\"Row\") +\n",
+    "      # Customizing the x-axis\n",
+    "      scale_x_continuous(breaks = 1:12, labels = as.character(1:12)) +\n",
+    "      # Quadrants as rectangles with borders\n",
+    "      geom_rect(\n",
+    "        data = quadrants,\n",
+    "        aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax),\n",
+    "        color = \"black\", fill = NA, linewidth = 1\n",
+    "      ) +\n",
+    "      # Custom fill colors for each SampleType\n",
+    "      scale_fill_manual(\n",
+    "        values = sample_colours\n",
+    "      ) +\n",
+    "      # Theming\n",
+    "      theme_minimal() +\n",
+    "      theme(\n",
+    "        axis.text = element_text(size = 12),  \n",
+    "        strip.text = element_text(size = 14, face = \"bold\"), \n",
+    "        panel.grid = element_blank(),  \n",
+    "        plot.title = element_text(size = 16, face = \"bold\", hjust = 0.5),\n",
+    "      ) +\n",
+    "    # Customizing the legend to add an outline for the colored squares\n",
+    "    guides(\n",
+    "      fill = guide_legend(\n",
+    "        override.aes = list(\n",
+    "          color = \"black\",  # Outline color for the squares\n",
+    "          size = 1          # Outline size for the squares\n",
+    "        )\n",
+    "      )\n",
+    "    ) +\n",
+    "    # Title for the plot\n",
+    "    ggtitle(\"Sample Types and Quadrants Distribution by Batch\")+\n",
+    "    coord_fixed(ratio = 0.75)\n",
+    "    print(plate_layout)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead7a682-fed9-43ac-a5c3-f3ab85acc749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_plate_layout(quadrants, sample_colours)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a47051bd-8e27-4913-9505-b11cc670379f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Primer Dimer Content\n",
     "\n",
@@ -476,7 +598,9 @@
   {
    "cell_type": "markdown",
    "id": "fcc14277-8458-4182-8c26-f0c91a34de08",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Balancing Across Batches\n",
     "\n",
@@ -521,7 +645,9 @@
   {
    "cell_type": "markdown",
    "id": "df85fa94-3c7f-4cfe-b1ba-72f33532e6cc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Control Summary\n",
     "\n",
@@ -716,10 +842,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# library(tibble)  # Ensure tibble is loaded\n",
-    "# library(ggplot2)  # For plotting\n",
-    "# library(plotly)  # For interactivity\n",
-    "\n",
     "# Get reads for each locus, label reaction and extract chrom and start from locus name\n",
     "summary_data <- amplicons_negative %>%\n",
     "  group_by(reaction, Locus) %>%\n",
@@ -765,8 +887,97 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d30a87f-7176-46b2-8820-a84670160c0c",
+   "id": "54d8f5c8-c108-495d-a9cb-3aff83c376f4",
    "metadata": {},
+   "source": [
+    "#### Negative Control Contamination Maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7005efeb-e874-41a0-ba83-0ad06331dae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_plate_with_feature <- function(target, allele_data, quadrants, sample_colours, fill_param, scale_midpoint, scale_label) {\n",
+    "\n",
+    "    target_data <- allele_data %>% filter(SampleID == target)\n",
+    "    comparison <- target_data %>% \n",
+    "        inner_join(allele_data, by = c(\"Locus\",\"PseudoCIGAR\"), suffix = c(\"_target\", \"\")) %>%\n",
+    "        group_by(SampleID_target, SampleID, PseudoCIGAR) %>%\n",
+    "        summarise(\n",
+    "            common_count = n(),  # Count the number of times the PseudoCIGAR is shared\n",
+    "            common_reads = sum(Reads_target + Reads, na.rm = TRUE),  # Sum the reads of both samples\n",
+    "            .groups = \"drop\"\n",
+    "        )\n",
+    "    comparison_plate <- comparison %>%\n",
+    "      inner_join(manifest, by = \"SampleID\")\n",
+    "    \n",
+    "    # Merge comparison_plate with quadrants to include reads_per_reaction\n",
+    "    merged_data <- merge(comparison_plate, quadrants, by = c(\"Batch\", \"Row\", \"Column\", \"SampleType\"), all.y = TRUE)\n",
+    "    \n",
+    "    # Ensure NAs in SampleType are labeled\n",
+    "    merged_data$SampleType[is.na(merged_data$SampleType)] <- \"empty\"\n",
+    "    \n",
+    "    # Create a new column to identify the target sample\n",
+    "    merged_data$target <- ifelse(merged_data$SampleID == target, \"target\", \"other\")\n",
+    "\n",
+    "    # Create the heatmap plot\n",
+    "    plate_layout <- ggplot(merged_data) +\n",
+    "      # Heatmap fill based on reads_per_reaction\n",
+    "      geom_tile(aes(x = Column, y = y, fill = !!rlang::parse_expr(fill_param)), color = NA, width = 0.95, height = 0.95) +\n",
+    "      # Separate tile layer for outlines\n",
+    "      geom_rect(data = merged_data,\n",
+    "                aes(xmin = Column-0.45, xmax = Column+0.45, ymin = y-0.45, ymax = y+0.45, color = target), \n",
+    "                fill = NA, linewidth = 1.3) +\n",
+    "      # Color gradient for heatmap\n",
+    "      scale_fill_gradient2(\n",
+    "        low = \"black\",\n",
+    "        mid = \"darkorange4\",\n",
+    "        high = \"darkorange\",\n",
+    "        midpoint = scale_midpoint,\n",
+    "        name = scale_label\n",
+    "      ) +\n",
+    "      # Custom colors for target vs normal\n",
+    "      scale_color_manual(values = c(\"other\" = \"darkgrey\", \"target\" = \"red3\")) +  # Highlight sample in red, others in gray\n",
+    "      # Labels\n",
+    "      scale_y_continuous(breaks = merged_data$y, labels = merged_data$Row) +\n",
+    "      scale_x_continuous(breaks = 1:12, labels = as.character(1:12)) +\n",
+    "      xlab(\"Column\") +\n",
+    "      ylab(\"Row\") +\n",
+    "      ggtitle(\"Reads per Reaction Heatmap\") +\n",
+    "      # Theme adjustments\n",
+    "      theme_minimal() +\n",
+    "      theme(\n",
+    "        axis.text = element_text(size = 12),\n",
+    "        strip.text = element_text(size = 14, face = \"bold\"),\n",
+    "        panel.grid = element_blank(),\n",
+    "        plot.title = element_text(size = 16, face = \"bold\", hjust = 0.5),\n",
+    "        legend.key = element_rect(colour = \"black\")  # Ensure visible legend border\n",
+    "      ) + \n",
+    "      coord_fixed(ratio = 0.75)\n",
+    "    \n",
+    "    print(plate_layout)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb3908cf-c9f5-48d1-8490-3bcc19ee4e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_plate_with_feature(\"Negative-Control-2\", allele_data, quadrants, sample_colours, \"log10(common_reads+0.1)\", 2, \"log10(common_reads)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d30a87f-7176-46b2-8820-a84670160c0c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Successul Amplification"
    ]
@@ -987,126 +1198,11 @@
   {
    "cell_type": "markdown",
    "id": "6ae84c07-93e2-49b4-b588-14746bf31bb7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Plate Maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70d5b6dc-1023-4a67-9eb0-921fc855a3b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_plate_template <- function(summary_samples, batches, nrows=8, ncols=12) {\n",
-    "    quadrants <-\n",
-    "      expand.grid(\n",
-    "        Batch = batches,\n",
-    "        y = 1:nrows,\n",
-    "        Column = 1:ncols\n",
-    "      ) %>%\n",
-    "      mutate(\n",
-    "        ymin = y - 0.45,\n",
-    "        ymax = y + 0.45,\n",
-    "        xmin = Column - 0.45,\n",
-    "        xmax = Column + 0.45\n",
-    "      ) %>%\n",
-    "      mutate(Row = toupper(rev(letters[1:nrows])[y])) %>%\n",
-    "      # Join on the sample information to the plate\n",
-    "      left_join(\n",
-    "        summary_samples %>%\n",
-    "          select(Batch, Column, Row, SampleType) %>%\n",
-    "          distinct(),\n",
-    "        by = c(\"Batch\", \"Column\", \"Row\" = \"Row\")\n",
-    "      )\n",
-    "    return(quadrants)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80874960-24a2-4db8-83d9-eca28cebcab4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quadrants <- create_plate_template(summary_samples, unique(summary_samples$Batch))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29bb6ac8-8fbb-4a79-b636-a4418cb5794d",
-   "metadata": {},
-   "source": [
-    "### Plate Layout\n",
-    "\n",
-    "The plate layout provides a visual representation of sample organization, including the placement of positive and negative controls. This is allows verification that controls are positioned correctly to validate assay performance with later plots."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b44be002-3aac-47f4-bfb0-3c326ec3a42c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_plate_layout <- function(quadrants, sample_colours) {\n",
-    "    # Ensure that NAs in SampleType are replaced with \"NA\" string (or another label)\n",
-    "    quadrants$SampleType[is.na(quadrants$SampleType)] <- \"empty\"\n",
-    "    plate_layout <- ggplot(quadrants) +\n",
-    "      # Tiles representing sample types, fill based on SampleType\n",
-    "      geom_tile(aes(x = Column, y = y, fill = SampleType), color = \"white\") +\n",
-    "      # Facet by Batch\n",
-    "      facet_wrap(vars(Batch), ncol = 1) +\n",
-    "      scale_y_continuous(breaks = quadrants$y, labels = quadrants$Row) +\n",
-    "      # Make sure labels are correct\n",
-    "      xlab(\"Column\") +\n",
-    "      ylab(\"Row\") +\n",
-    "      # Customizing the x-axis\n",
-    "      scale_x_continuous(breaks = 1:12, labels = as.character(1:12)) +\n",
-    "      # Quadrants as rectangles with borders\n",
-    "      geom_rect(\n",
-    "        data = quadrants,\n",
-    "        aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax),\n",
-    "        color = \"black\", fill = NA, linewidth = 1\n",
-    "      ) +\n",
-    "      # Custom fill colors for each SampleType\n",
-    "      scale_fill_manual(\n",
-    "        values = sample_colours\n",
-    "      ) +\n",
-    "      # Theming\n",
-    "      theme_minimal() +\n",
-    "      theme(\n",
-    "        axis.text = element_text(size = 12),  \n",
-    "        strip.text = element_text(size = 14, face = \"bold\"), \n",
-    "        panel.grid = element_blank(),  \n",
-    "        plot.title = element_text(size = 16, face = \"bold\", hjust = 0.5),\n",
-    "      ) +\n",
-    "    # Customizing the legend to add an outline for the colored squares\n",
-    "    guides(\n",
-    "      fill = guide_legend(\n",
-    "        override.aes = list(\n",
-    "          color = \"black\",  # Outline color for the squares\n",
-    "          size = 1          # Outline size for the squares\n",
-    "        )\n",
-    "      )\n",
-    "    ) +\n",
-    "    # Title for the plot\n",
-    "    ggtitle(\"Sample Types and Quadrants Distribution by Batch\")+\n",
-    "    coord_fixed(ratio = 0.75)\n",
-    "    print(plate_layout)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ead7a682-fed9-43ac-a5c3-f3ab85acc749",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_plate_layout(quadrants, sample_colours)"
+    "## Amplification Plate Maps"
    ]
   },
   {
@@ -1126,9 +1222,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_with_feature <- function(summary_samples, quadrants, sample_colours, fill_param, scale_midpoint) {\n",
+    "plot_plate_with_feature <- function(summary_samples, quadrants, sample_colours, fill_param, scale_midpoint, scale_label) {\n",
     "    # Merge summary_samples with quadrants to include reads_per_reaction\n",
-    "    merged_data <- merge(summary_samples, quadrants, by = c(\"Batch\", \"Row\", \"Column\", \"SampleType\"), all.x = TRUE)\n",
+    "    quadrants <- crossing(summary_samples %>% select(reaction) %>% distinct() , quadrants)\n",
+    "    merged_data <- merge(summary_samples, quadrants, by = c(\"Batch\", \"Row\", \"Column\", \"SampleType\", \"reaction\"), all.y = TRUE)\n",
     "    \n",
     "    # Ensure NAs in SampleType are labeled\n",
     "    merged_data$SampleType[is.na(merged_data$SampleType)] <- \"empty\"\n",
@@ -1148,7 +1245,7 @@
     "        mid = \"darkorange4\",\n",
     "        high = \"darkorange\",\n",
     "        midpoint = scale_midpoint,\n",
-    "        name = \"log10(reads)\"\n",
+    "        name = scale_label\n",
     "      ) +\n",
     "      # Outline colors based on SampleType\n",
     "      scale_color_manual(values = sample_colours, na.translate = TRUE) +\n",
@@ -1179,7 +1276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_with_feature(summary_samples, quadrants, sample_colours, \"log10(reads_per_reaction + 0.1)\", 2)"
+    "plot_plate_with_feature(summary_samples, quadrants, sample_colours, \"log10(reads_per_reaction + 0.1)\", 2, \"log10(reads_per_reaction)\")"
    ]
   },
   {
@@ -1198,15 +1295,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_with_feature(summary_samples, quadrants, sample_colours, \"prop_good_loci\", 0.5)"
+    "plot_plate_with_feature(summary_samples, quadrants, sample_colours, \"prop_good_loci\", 0.5, \"prop_good_loci\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "dfd855da-835a-4b72-a9a7-ca0adff5900e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Save filtered allele table"
+    "## Save filtered allele table"
    ]
   },
   {
@@ -1239,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1622f3c-01f9-43b8-a7a8-d96330eaa1e5",
+   "id": "2d4781e3-158f-486c-8d9e-12ec815401b2",
    "metadata": {},
    "outputs": [],
    "source": []
