Update plot name

--- a/QC_report.ipynb
+++ b/QC_report.ipynb
@@ -77,6 +77,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "47b936c3-61da-4f75-8805-4c8a090d953e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dir <- \"data/Jessica_results_example\"\n",
+    "manifest_file <- \"data/Jessica_manifest.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e84351ee-7c19-4f8d-8f2a-81b56415c403",
    "metadata": {},
    "outputs": [],
@@ -425,9 +436,7 @@
   {
    "cell_type": "markdown",
    "id": "29bb6ac8-8fbb-4a79-b636-a4418cb5794d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Plate Layout\n",
     "\n",
@@ -544,9 +553,7 @@
   {
    "cell_type": "markdown",
    "id": "a47051bd-8e27-4913-9505-b11cc670379f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Primer Dimer Content\n",
     "\n",
@@ -598,9 +605,7 @@
   {
    "cell_type": "markdown",
    "id": "fcc14277-8458-4182-8c26-f0c91a34de08",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Balancing Across Batches\n",
     "\n",
@@ -645,9 +650,7 @@
   {
    "cell_type": "markdown",
    "id": "df85fa94-3c7f-4cfe-b1ba-72f33532e6cc",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Control Summary\n",
     "\n",
@@ -946,7 +949,7 @@
     "      scale_x_continuous(breaks = 1:12, labels = as.character(1:12)) +\n",
     "      xlab(\"Column\") +\n",
     "      ylab(\"Row\") +\n",
-    "      ggtitle(\"Reads per Reaction Heatmap\") +\n",
+    "      ggtitle(\"Reads for PseudoCIGARs in common\") +\n",
     "      # Theme adjustments\n",
     "      theme_minimal() +\n",
     "      theme(\n",
@@ -969,7 +972,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_with_feature(\"Negative-Control-2\", allele_data, quadrants, sample_colours, \"log10(common_reads+0.1)\", 2, \"log10(common_reads)\")"
+    "# Input the \n",
+    "negative_control_name <- \"Negative-Control-4\"\n",
+    "plot_plate_with_feature(negative_control_name, allele_data, quadrants, sample_colours, \"log10(common_reads+0.1)\", 2, \"log10(common_reads)\")"
    ]
   },
   {
